--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -6,7 +6,7 @@ Consequently, the neuroscientific literature is studied, and promising findings 
 Thus, this chapter can be considered a survey of existing neuroscientific findings.
 However, compared to the related work section, it contains more interpretations and introduces a unified vocabulary compatible with both fields, neuroscience and deep learning.
 
-In the following, important neuroscientific findings are presented in \secref{neuroscience_findings}, describing lateral connections (\secref{neuroscience_findings_lateral_connections}), net fragments (\secref{neuroscience_findings_net_fragments}), the local learning principle (\secref{neuroscience_findings_local_learning_principle}), and projection fibres (\secref{neuroscience_findings_projection_fibres}).
+In this chapter, important neuroscientific findings are presented in \secref{neuroscience_findings}, describing lateral connections (\secref{neuroscience_findings_lateral_connections}), net fragments (\secref{neuroscience_findings_net_fragments}), the local learning principle (\secref{neuroscience_findings_local_learning_principle}), and projection fibres (\secref{neuroscience_findings_projection_fibres}).
 Finally, in \secref{biologial_inspiration_vision}, it is described how these biological findings could improve current systems.
 
 
