--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -7,7 +7,7 @@ Thus, this chapter can be considered a survey of existing neuroscientific findin
 However, compared to the related work section, it contains more interpretations and introduces a unified vocabulary compatible with both fields, neuroscience and deep learning.
 
 In this chapter, important neuroscientific findings are presented in \secref{neuroscience_findings}, describing lateral connections (\secref{neuroscience_findings_lateral_connections}), net fragments (\secref{neuroscience_findings_net_fragments}), the local learning principle (\secref{neuroscience_findings_local_learning_principle}), and projection fibres (\secref{neuroscience_findings_projection_fibres}).
-Finally, in \secref{biologial_inspiration_vision}, it is described how these biological findings could improve current systems.
+Afterwards, in \secref{biologial_inspiration_vision}, it is described how these biological findings could improve current systems.
 
 
 
@@ -129,9 +129,9 @@ Such sets of projection fibres that are frequently activated simultaneously are 
 A control unit in the human brain is a unipolar neuron, a kind of neuron with extensions (so-called processes) that end in synapses and can conduct signals in both directions - from the synapse to the neuron and from the neuron to the synapse \sidecite{byrne_oxford_2019}.
 Control units trigger a mapping when a net fragment in the visual cortex matches another fragment in the temporal cortex, i.e. when these two fragments have a high correlation \cite{zhu_maplets_2004}. However, they only remain active if numerous other projection fibres confirm the decision and map their respective fragments in the visual cortex to the same object prototype in a topological manner \sidecite{von_der_malsburg_concerning_2018}. By doing so, the human brain generates numerous hypotheses about observations, but inhibitory signals quickly deactivate most projections, leaving only the plausible ones active.
 
-In \figref{maplets}, such a projection between net fragments and an object prototype of a line is visualised. A vast amount of projection fibres (grey) run between these two areas, but only the most suitable ones are activated by the control unit of a maplet (red).
+Such a projection between net fragments and an object prototype of a line is visualised in \figref{maplets}. A vast amount of projection fibres (grey) run between these two areas, but only the most suitable ones are activated by the control unit of a maplet (red).
 Please note that the line on the left is translated and stretched. Nevertheless, projection fibres still map such a transformed object to an idealised prototype.
-In \figref{maplets}, a direct mapping from net fragments to prototypes is shown for better clarity. In contrast, the mapping in the brain is done over several hierarchical levels, saving many projection fibres \sidecite{anderson_shifter_1987}.
+A direct mapping from net fragments to prototypes is shown in \figref{maplets} for better clarity. In contrast, the mapping in the brain is done over several hierarchical levels, saving many projection fibres \sidecite{anderson_shifter_1987}.
 
 Projection fibres thus provide generalisation, i.e. different, transformed versions of an object are recognised and mapped to a reference frame. This explains the ability of humans to see a new object once and immediately recognise it in a transformed version.
 
