--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -111,7 +111,7 @@ The precise biological mechanism of how this is implemented is unclear; One hypo
 As described at the beginning of this chapter, the visual cortex \sidecite{tong_primary_2003} extracts patterns from visual information \sidecite{grill-spector_human_2004}. This process is implemented with the aforementioned building blocks, such as lateral connections \sidecite{gilbert_lateral_1990, liang_interactions_2017, stettler_lateral_2002} and net fragments \cite{von_der_malsburg_concerning_2018}. In theory, this is sufficient to implement the principles from the Gestalt psychology \cite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017} and allows building feature hierarchies without early commitment \sidecite{marr_vision_2010}. However, it is not sufficient for efficient visual object detection.
 
 In the human brain, object detection occurs in the temporal cortex \cite{miyashita_inferior_1993, conway_organization_2018}, a region spatially distant from the visual cortex.
-The brain's solution to transmit information over such long distances are \emph{projection fibres} (a type of axons) \cite{tanigawa_organization_2005, greig_molecular_2013}.
+The brain's solution to transmit information over such long distances is utilising \emph{projection fibres} (a type of axons) \cite{tanigawa_organization_2005, greig_molecular_2013}.
 Projection fibres are links between neurons in the visual cortex and object prototypes (so-called reference frames) in the temporal cortex \cite{goodale_separate_1992}.
 
 Object prototypes in the temporal cortex are net fragments similar to those in the visual cortex. However, the visual cortex captures an overlay of fragments that describe a captured visual scene \cite{von_der_malsburg_theory_2022}, whereby it is unclear which fragments represent distinct objects and how they are related.
